@@ -2,8 +2,13 @@ Changes to 1.2.5 +nb
 
 [CHANGES]
 *lib/commentary.php --> added a new hook "gmcommentarea" with section and "allow_gm"=>false to handle module requests to allow /game comments 
+	 		added a fix (GM titles didn't work due to wrong variable used)
+*lib/forest.php --> new hook "forest" to add stuff before the description (i.e. for mobile buttons that need to be top)
+*superuser.php --> new hook to make the section "switchable"
 [FIXES]
+*lib/commentary.php --> forgot a closing > at a </div> - section close
 [REMOVES]
+
 Changes to 1.2.4 +nb
 [CHANGES]
 *home.php --> added a "forgotten password" link below the Login Button
